# fast_tffm

./: CMakeLists.txt  README.md  enviroment.yml  fast_tffm.py
py/: fm_model.py  fm_ops.py  fm_predict.py  fm_train.py
python/: cmdline.py  setup.py
python/fast_tffm/: cmdline.py  scorer.py
python/fast_tffm/fm/: config.py  model.py  runner.py
python/fm/: runner.py
test/: fm_parser_op_test.py  fm_scorer_op_test.py
